<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for Latin keyboard  -->
    <string name="ime_name">Loli Keyboard</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    
    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

    <!-- Labels for subtype -->
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">Loli Keyboard</string>
    <string name="lang_mon">mon</string>
    <string name="lang_karen">karen</string>
    <string name="lang_shan">shan</string>



    <!-- Titles for ImePreference -->
    <string name="settings_name">Loli Keyboard Settings</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="general_category">General</string>

    <!--Ime list items Text-->
    <string name="version_title">Version </string>
    <string name="version_summary">0.1 (Beta)</string>
    <string name="enable_lolikeyboard">Enable Loli keyboard</string>
    <string name="choose_lolikeyboard">Select Loli keyboard</string>

    <string name="about_us">About us</string>
    <string name="wha">Win Htaik Aung</string>
    <string name="ty">Thuya Myo Nyunt </string>
    <string name="OK">OK</string>




</resources>
