<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"

    android:title="@string/settings_name">
    <PreferenceCategory android:title="Version" >
        <Preference
            android:key="version"
            android:title="@string/version_title"
            android:summary="@string/version_summary"

            >

    </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Settings" >

        <Preference
            android:key="ime_setting"
            android:title="@string/enable_lolikeyboard"
            android:summary="@string/enable_lolikeyboard"

            >
            </Preference>

        <Preference android:key="use_ime"
            android:title="@string/choose_lolikeyboard"
            android:summary="@string/choose_lolikeyboard">
            </Preference>
        <SwitchPreference android:key="vib_press"
            android:title="Vibrate On Press"
                        
            android:summary="Select Loli Keyboard To Enjoy Typing">
        </SwitchPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Type to Test" >
        <EditTextPreference
            android:title="Test Keyboard"
            android:summary="Type Text to taste Your Loli keyboard"
            android:key="prefUserPassword"/>
    </PreferenceCategory>
    <!--<PreferenceCategory android:title="Feed Back" >
        <Preference android:key="fedback"
            android:title="Feed Back"
            android:summary="Help us by Giving feed Back"
            ></Preference>
    </PreferenceCategory>-->
    <PreferenceCategory android:title="About" >
        <Preference android:key="abt"
            android:title="@string/about_us"
            android:summary="@string/about_us"
            ></Preference>
    </PreferenceCategory>


</PreferenceScreen>
